spacing fix

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ dt {
 }
 dd {
     color: #424242;
+    margin-left: 2rem;
 }
 .ut {
     font-weight: bold;
